# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shader.comp.glsl.spv  vcpkg.json
.cache/clangd/index/: _fixes.hpp.85D8F3ED4856D78F.idx  _vectorize.hpp.0988497D1F0EB698.idx  atom.hpp.634CF8B04666D873.idx  camera.cpp.6513730FC52F5C1B.idx  camera.hpp.48E0BFB8337166DE.idx  common.hpp.5ED06BD755F59BE6.idx  component_wise.hpp.216DA42DD190C717.idx  component_wise.inl.39B53C0A28BD7FBE.idx  compute_common.hpp.46370FF1BC7EFA6A.idx  compute_vector_relational.hpp.8A25866A045FEE81.idx  constants.hpp.A8E287D5E3138223.idx  constants.inl.3DBEAB0A7B5CF258.idx  epsilon.hpp.09EDB13AD6DE8929.idx  epsilon.inl.63AF0A8B6B3043B0.idx  exponential.hpp.AAB500491CA8C0F7.idx  fence.cpp.5817B47915067CD8.idx  fence.hpp.1BC259FC3B5CC242.idx  func_common.inl.19FA7DE0244E2870.idx  func_exponential.inl.CD4BB9CBCFFA1D0A.idx  func_geometric.inl.995D7F9F521AB932.idx  func_integer.inl.6F79F46B473EA539.idx  func_matrix.inl.87BC5F6CE04CFE41.idx  func_packing.inl.0FD43F2E53B04D84.idx  func_trigonometric.inl.234C03277392C7BE.idx  func_vector_relational.inl.46B1B9E3677FAF7D.idx  fwd.hpp.6D81E7877F25AE57.idx  geometric.hpp.7FC1061F8DB34194.idx  glm.hpp.A66FD963D700875C.idx  integer.hpp.114C7ED9033EC2EB.idx  main.cpp.E13C39BC0FE3BAFC.idx  mat2x2.hpp.3EFBD55C5D108146.idx  mat2x3.hpp.61DFB5843E400E86.idx  mat2x4.hpp.26C66F0A0FB756CC.idx  mat3x2.hpp.3AC609627070D0A6.idx  mat3x3.hpp.49A636561B08F35F.idx  mat3x4.hpp.C2E9AB591D77E7F3.idx  mat4x2.hpp.3D2FEA9345B1F269.idx  mat4x3.hpp.A3BF570EB8B32410.idx  mat4x4.hpp.48E91FC0CC779886.idx  (+185 more)
res/: shader.comp.glsl
src/: camera.cpp  camera.hpp  main.cpp  raytracer_app.cpp  raytracer_app.hpp
